# Helianthus

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .gitmodules  .yamllint  BAZEL_MIGRATION.md  BUILD.bazel  BUILD_CMAKE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HOTRELOAD_INTEGRATION.md  HelianthusConfig.h  INSTALL.md  MODULE.bazel  README.md  SECURITY_SCAN_FIX_SUMMARY.md  SECURITY_SCAN_SETUP.md  TODO.md  WINDOWS_BUILD.md  WORKSPACE  WORKSPACE.legacy  build.bat  build.sh  compile_commands.json  conan.conf  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  custom_config.json  deactivate_conanbuild.sh  deactivate_conanrun.sh  dependency-check-config.xml  run_tests.sh  simple_bindings.lua  suppression.xml  test-security-scan.sh  (+3 more)
Containers/: BUILD.bazel  Dockerfile  README.md  buildah_import.sh  entrypoint.sh  healthcheck.sh  podman_import.sh  skopeo_copy.sh
Docs/: BUILD.bazel  Configuration_Management_Guide.md  Documentation_System_Summary.md  EnhancedPrometheusMetrics.md  GrafanaDashboardSetup.md  HELIANTHUS_REFLECTION_GUIDE.md  HelianthusReflection_Summary.md  Integration_Test_Completion_Report.md  Integration_Test_Resolution_Report.md  PerformanceMetrics.md  Phase1.5_ReflectionAndScripting.md  Phase1.5_Summary.md  Project_Status_Report.md  README.md  REFLECTION_USAGE_GUIDE.md  Reflection_Build_Optimization.md  Reflection_Tag_And_AutoRegister_Guide.md  SmartAutoRegistration.md  SmartAutoRegistration_Summary.md  Stress_Test_Optimization_Report.md  UEStyleReflection_Summary.md  UE_STYLE_REFLECTION_GUIDE.md  Unit_Test_Improvement_Report.md  grafana-dashboard.json  grafana_dashboard.json
Examples/: AdvancedReflectionExample.cpp  AlertTest.cpp  AttributeMetadataExample.cpp  BUILD.bazel  BatchProcessingExample.cpp  CMakeLists.txt  CompressionEncryptionTest.cpp  ConfigExample.cpp  ConfigSystemExample.cpp  CorrectReflectionExample.cpp  DLQMonitorTest.cpp  DeadLetterCoreTest.cpp  DeadLetterQueueExample.cpp  DestructorTest.cpp  DiscoveryExample.cpp  EnhancedPrometheusExample.cpp  FilePersistenceTest.cpp  FileStreamTest.cpp  FileSystemTest.cpp  GameServerWithHotReload.cpp  HAFailoverDemo.cpp  HealthCheckExample.cpp  HelianthusReflectionExample.cpp  HelianthusReflectionTest.cpp  Helianthus_ReflectionExample.cpp  IndexReadTest.cpp  InitializeStepTest.cpp  LogCategoryExample.cpp  LoggerShutdownTest.cpp  LoggingTestExample.cpp  LuaHotReloadExample.cpp  MessageQueueExample.cpp  MessageQueuePersistenceExample.cpp  MetaExtensionDemo.cpp  MetaExtensionDemo.h  MultiLanguageScriptingExample.cpp  MutexDestructorTest.cpp  PascalCaseExample.h  PerformanceBenchmark.cpp  PerformanceBenchmarkExample.cpp  (+39 more)
Shared/: BUILD.bazel  CMakeLists.txt
Shared/Common/: BUILD.bazel  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  LogCategories.cpp  LogCategories.h  LogCategory.h  Logger.cpp  Logger.h  ResourceMonitor.cpp  ResourceMonitor.h  StructuredLogger.cpp  StructuredLogger.h  TCMallocWrapper.cpp  TCMallocWrapper.h  Types.h  Utils.h
Shared/Config/: BUILD.bazel  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  IConfigProvider.h  JsonConfigProvider.cpp  JsonConfigProvider.h
Shared/Database/: BUILD.bazel  CMakeLists.txt  ConnectionPool.h  DatabaseConfig.cpp  DatabaseConfig.h  DatabaseFactory.h  DatabaseTypes.h  IConnectionPool.h  IDatabase.h  ORM.h
Shared/Discovery/: BUILD.bazel  CMakeLists.txt  DiscoveryTypes.h  HealthChecker.cpp  HealthChecker.h  IHealthChecker.h  ILoadBalancer.h  IServiceDiscovery.h  IServiceRegistry.h  LoadBalancer.cpp  LoadBalancer.h  ServiceDiscovery.cpp  ServiceDiscovery.h  ServiceRegistry.cpp  ServiceRegistry.h
Shared/Message/: BUILD.bazel  CMakeLists.txt  IMessageQueue.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  MessageTypes.h
Shared/MessageQueue/: BUILD.bazel  CMakeLists.txt  HealthCheck.cpp  HealthCheck.h  IMessageQueue.h  MessagePersistence.cpp  MessagePersistence.h  MessageQueue.cpp  MessageQueue.h  MessageQueueAlerts.cpp  MessageQueueBatching.cpp  MessageQueueCompression.cpp  MessageQueuePerf.cpp  MessageQueuePersistence.cpp  MessageTypes.h  PerformanceOptimizer.cpp  PerformanceOptimizer.h
Shared/Monitoring/: BUILD.bazel  CMakeLists.txt  EnhancedPrometheusExporter.cpp  EnhancedPrometheusExporter.h  PrometheusExporter.cpp  PrometheusExporter.h
Shared/Network/: BUILD.bazel  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  INetworkManager.h  INetworkSocket.h  NetworkManager.cpp  NetworkManager.h  NetworkTypes.h  WinSockInit.cpp  WinSockInit.h
Shared/RPC/: BUILD.bazel  CMakeLists.txt  IRpcClient.h  IRpcInterceptor.cpp  IRpcInterceptor.h  IRpcServer.h  MessageRouter.cpp  MessageRouter.h  NetworkAdapter.cpp  NetworkAdapter.h  NetworkAdapterFixed.cpp  NetworkAdapterFixed.h  NetworkAdapterSimple.cpp  NetworkAdapterSimple.h  RpcClient.cpp  RpcInterceptors.cpp  RpcInterceptors.h  RpcMessage.cpp  RpcMessage.h  RpcMessageHandler.cpp  RpcMessageHandler.h  RpcReflection.h  RpcReflectionExport.h  RpcReflectionExportAdapter.h  RpcSerializer.cpp  RpcSerializer.h  RpcServer.cpp  RpcServiceMacros.h  RpcTypes.h
Shared/Reflection/: AttributeMacros.h  AttributeReflection.h  AttributeRuntime.h  AutoRegistration.h  BUILD.bazel  CMakeLists.txt  CodeGenerator.h  CompileTimeReflection.h  HClass.h  HClassMacros.h  HClassPascal.h  HClassReflection.h  HObject.h  HelianthusCodeGenerator.h  HelianthusReflection.h  Macros.h  MetaSystem.cpp  MetaSystem.h  MetaTags.h  README.md  Reflection.cpp  Reflection.h  ReflectionCore.h  ReflectionExport.h  ReflectionMacros.h  ReflectionSystem.cpp  ReflectionTypes.h  ScriptBinding.cpp  ScriptBinding.h  UEReflection.h  UEReflectionMacros.h  reflection_codegen.py
Shared/Scripting/: BUILD.bazel  CMakeLists.txt  HotReloadManager.cpp  HotReloadManager.h  IScriptEngine.h  LuaScriptEngine.cpp  LuaScriptEngine.h  PythonScriptEngine.cpp  PythonScriptEngine.h  ScriptingTypes.h
Tests/: CMakeLists.txt  README.md
Tests/Common/: BUILD.bazel  CMakeLists.txt  CommandLineParserTest.cpp  CommonTest.cpp  TCMallocTest.cpp  (+1 more)
tools/: BUILD.bazel  generate_docs.sh
(+193 files in other folders)
