load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

filegroup(
    name = "entrypoint_sh",
    srcs = ["entrypoint.sh"],
)

filegroup(
    name = "healthcheck_sh",
    srcs = ["healthcheck.sh"],
)

# 生成 rootfs tar（非OCI布局），适合在无Docker环境下导出并在其他环境中导入构建镜像
genrule(
    name = "helianthus_rootfs_tar",
    srcs = [
        "//Examples:persistence_metrics_example",
        ":entrypoint_sh",
        ":healthcheck_sh",
    ],
    outs = ["helianthus-rootfs.tar"],
    cmd = (
        "set -e; "
        + "ROOT=$(@D)/rootfs; "
        + "rm -rf $$ROOT && mkdir -p $$ROOT/app/bin; "
        + "cp $(location //Examples:persistence_metrics_example) $$ROOT/app/bin/HelianthusExample; "
        + "cp $(location :entrypoint_sh) $$ROOT/app/entrypoint.sh; "
        + "cp $(location :healthcheck_sh) $$ROOT/app/healthcheck.sh; "
        + "chmod +x $$ROOT/app/entrypoint.sh $$ROOT/app/healthcheck.sh; "
        + "tar -C $$ROOT -cf $@ ."
    ),
    visibility = ["//visibility:public"],
)


