cc_binary(
    name = "tcmalloc_config_example",
    srcs = ["TCMallocConfigExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "batch_processing_example",
    srcs = ["BatchProcessingExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Network:network",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "wakeup_mechanism_example",
    srcs = ["WakeupMechanismExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Network:network",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "lua_hotreload_example",
    srcs = ["LuaHotReloadExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Scripting:scripting",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "game_server_with_hotreload",
    srcs = ["GameServerWithHotReload.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Scripting:scripting",
        "//Shared/Network:network",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "performance_monitoring_example",
    srcs = ["PerformanceMonitoringExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Common:common",
        "//Shared/Network:network",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "log_category_example",
    srcs = ["LogCategoryExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "unified_api_example",
    srcs = ["UnifiedApiExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Network:network",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "config_system_example",
    srcs = ["ConfigSystemExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Config:config",
        "//Shared/Common:common",
        "//Shared/Network:network",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "rpc_example",
    srcs = ["RpcExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/RPC:rpc",
        "//Shared/Common:common",
        "//Shared/Network:network",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "discovery_example",
    srcs = ["DiscoveryExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Discovery:discovery",
        "//Shared/Common:common",
        "//Shared/Network:network",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "message_queue_example",
    srcs = ["MessageQueueExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/MessageQueue:message_queue",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "message_queue_persistence_example",
    srcs = ["MessageQueuePersistenceExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/MessageQueue:message_queue",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "simple_persistence_example",
    srcs = ["SimplePersistenceExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8", "/DHELIANTHUS_ENABLE_LOGGING=1"],
        "//conditions:default": ["-std=c++20", "-DHELIANTHUS_ENABLE_LOGGING=1"],
    }),
    deps = [
        "//Shared/MessageQueue:message_queue",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "logging_test_example",
    srcs = ["LoggingTestExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "reflection_example",
    srcs = ["ReflectionExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Reflection:reflection",
        "//Shared/Scripting:scripting",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "multi_language_scripting_example",
    srcs = ["MultiLanguageScriptingExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Scripting:scripting",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "smart_reflection_example",
    srcs = ["SmartReflectionExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Reflection:reflection",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)



cc_binary(
    name = "helianthus_reflection_example",
    srcs = ["HelianthusReflectionExample.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++20", "/utf-8"],
        "//conditions:default": ["-std=c++20"],
    }),
    deps = [
        "//Shared/Reflection:helianthus_reflection",
        "//Shared/Common:common",
    ],
    visibility = ["//visibility:public"],
)